--- a/style.css
+++ b/style.css
@@ -1,49 +1,37 @@
-/* #main{
-    border: 2px solid;
-    border-radius: px;
-    height: 600px; */
-    /* width: 400px;
-    margin: auto;
+h1 {
+    text-align: center;
 }
 
-button{
-    height: 
-    padding: ;
-} */
-
-.flex{
+.flex {
     display: flex;
 }
 
-.flex-col{
+.flex-col {
     flex-direction: column;
 }
 
-.container{
-    background-color: aqua; 
-    width: 100%;
+.container {
+    background-color: aqua;
+    width: 450px;
     margin: auto;
-    padding: 10px;
+    padding: 30px 0px;
+    border-radius: 10px;
     align-items: center;
 }
 
-.btn{
+.btn {
     border-radius: 10px;
     font-size: xx-large;
     background-color: antiquewhite;
     padding: 15px;
     margin: 5px;
-    width: 65px;
+    width: 85px;
     cursor: pointer;
 }
 
-/* .row-input{
-    margin: 0px;
-    width: 0px;
-} */
-
-.input{
-    width: 250px;
+.input {
+    border: 0px;
+    width: 330px;
     padding: 15px 25px;
     font-size: xx-large;
     margin: 5px 0px;
