--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ h1 {
     padding: 30px 0px;
     border-radius: 10px;
     align-items: center;
+    box-shadow: 2px 2px 2px;
+
 }
 
 .btn {
@@ -27,6 +29,21 @@ h1 {
     margin: 5px;
     width: 85px;
     cursor: pointer;
+    box-shadow: 2px 2px 2px;
+}
+
+.btn:hover {
+    background-color: rgb(232, 228, 171)
+}
+
+#equals:hover {
+    background-color: skyblue
+}
+
+.btn:active {
+    background-color: rgb(232, 228, 171);
+    box-shadow: 0 2px #666;
+    transform: translateY(2px);
 }
 
 .input {
@@ -36,4 +53,9 @@ h1 {
     font-size: xx-large;
     margin: 5px 0px;
     border-radius: 10px;
+    box-shadow: 4px 4px;
+}
+
+#equals {
+    width: 185px;
 }
