--- a/style.css
+++ b/style.css
@@ -10,14 +10,20 @@ h1 {
     flex-direction: column;
 }
 
+body{
+    margin: 0;
+    background: linear-gradient(to bottom left,#666,grey);
+    min-height: 100vh;
+}
+
 .container {
-    background-color: aqua;
+    background-color: #878f99;
     width: 450px;
     margin: auto;
     padding: 30px 0px;
     border-radius: 10px;
     align-items: center;
-    box-shadow: 2px 2px 2px;
+    box-shadow: 0px 4px 10px;
 
 }
 
@@ -29,7 +35,7 @@ h1 {
     margin: 5px;
     width: 85px;
     cursor: pointer;
-    box-shadow: 2px 2px 2px;
+    box-shadow: 0px 2px 4px;
 }
 
 .btn:hover {
